# LogSlicer

./: .env.example  .gitignore  README.md  api.py  chains.py  chunk.ipynb  chunk_selection.py  main.py  map_reduce.ipynb  map_reduce2.ipynb  obfuscation.ipynb  pipeline.py  preprocess.py  pyproject.toml  setup.sh  unique_lines.ipynb
data_model/: job.py
loaders/: DLTLoader.py  __init__.py
models/: embeddings.py  llms.py
notebooks/: chunk.ipynb  emb_clusters.ipynb  preprocess.ipynb  read_can.ipynb
templates/: view.html
utils/: __init__.py  data_types.py  text_splitters.py  tokenizers.py
utils/dlt/: data_types.py  text_splitters.py  text_transformers.py
utils/models/: llms.py
utils/preprocess/: __init__.py  base_preprocessor.py  dlt_preprocessor.py  plaintext_preprocessor.py
utils/templates/: __init__.py  base_templates.py  chat_templates.py  dlt_templates.py
