[tool.poetry]
name = "logslicer"
version = "0.1.0"
description = ""
authors = ["Zixuan Chen (Amos) <zchen152@volvocars.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.28.1"
tiktoken = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
