[tool.poetry]
name = "logslicer"
version = "0.1.0"
description = ""
authors = ["Zixuan Chen (Amos) <zchen152@volvocars.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openai = "^0.28.1"
tiktoken = "^0.5.1"
python-can = "^4.2.2"
cantools = "^39.2.0"
pandas = "^2.1.1"
langchain = "^0.0.326"
scikit-learn = "^1.3.2"
sentence-transformers = "^2.2.2"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
matplotlib = "^3.8.0"
python-dotenv = "^1.0.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
